--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container my-2" align="center">
 
-    <h3><u>DevOps Courses List</u></h3>
+    <h3><u>**DevOps Courses List**</u></h3>
     <br>
     <table style="width:80%" border="1"
            class = "table table-striped table-responsive-md">
